# CPP_PROJECT

./: .gitignore  README.md  VEREISTEN_CHECKLIST.md
CPP_Project_Michiel_Martens/: AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  Card.cpp  Card.h  Deck.cpp  Deck.h  Game.cpp  Game.h  HumanPlayer.cpp  HumanPlayer.h  PlayerBase.cpp  PlayerBase.h  main.cpp
Chinees_Poepen_CPP_Project/: CMakeLists.txt  Card.h  Deck.cpp  Game.cpp  Game.h  Player.cpp  Player.h  main.cpp
